# whisper_eqx

./: .gitignore  README.md  helpers.py  main.py  pyproject.toml  pyrightconfig.json
src/: generate.py  layers.py  main.py  modelling.py  run_e2e.py  test_e2e.py  utils.py  verify.py
tests/: test_decoder.py  test_encoder.py
