[project]
name = "whisper-equinox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "basedpyright>=1.26.0",
    "datasets>=3.2.0",
    "equinox>=0.11.11",
    "ipdb>=0.13.13",
    "jax>=0.5.0",
    "librosa>=0.10.2.post1",
    "numba>=0.60.0",
    "pdbpp>=0.10.3",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "soundfile>=0.13.1",
    "termplotlib>=0.3.9",
    "torch>=2.6.0",
    "transformers>=4.48.2",
]
